manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app-service
spec:
  selector:
    app: aotapp 
  type: NodePort
  ports:
  - protocol: TCP
    port: 80
    targetPort: 4000
